# nonnative

./: Cargo.toml
benches/: bench.rs
src/: allocated_nonnative_field_var.rs  nonnative_field_var.rs
tests/: arithmetic_tests.rs  from_test.rs  to_bytes_test.rs  to_constraint_field_test.rs
